deployments-2/api/lh-bh-assessment-api/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingresslhbhassessmentapi
  annotations:
    kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/http2-push-preload: "true"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 300
    nginx.ingress.kubernetes.io/proxy-send-timeout: 300
    nginx.ingress.kubernetes.io/proxy-read-timeout: 300
spec:
  rules:
    - host:
      http:
        paths:
         - path: /bh-assessment-api
           pathType: Prefix
           backend:
             service:
              name: servicelhbhassessmentapi
              port:
                number: 80
